--- a/website/package.json
+++ b/website/package.json
@@ -9,6 +9,7 @@
     "@chakra-ui/react": "^2.5.5",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@tensorflow/tfjs": "^4.4.0",
     "framer-motion": "^10.11.5",
     "next": "latest",
     "react": "18.2.0",
